updated the services

--- a/index.html
+++ b/index.html
@@ -35,22 +35,52 @@
         </nav>
       </section>
       <section id="hero">
+        <div class="layout">
+          <video autoplay>
+            <source src="media/video/Space-hero-video.mp4" />
+          </video>
+        </div>
         <h1>Welcome to Mars</h1>
         <button>Buy now</button>
       </section>
     </header>
-    <main>
+    <main id="services">
       <h1>Our Services</h1>
       <article>
-        <figure><img src="" alt="" /></figure>
+        <figure><img src="img/falcony9.jpeg" alt="falcon9 photo" /></figure>
+        <h3>Falcon</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+          deserunt recusandae ab quidem aliquid eaque possimus odit a ipsam!
+          Assumenda enim dolorem, cupiditate saepe deserunt vero architecto ex
+          sequi soluta!
+        </p>
       </article>
       <article>
-        <figure><img src="" alt="" /></figure>
+        <figure><img src="img/heavy.jpeg" alt="falcon heavy photo" /></figure>
+        <h3>Falcon Heavy</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+          perspiciatis fugiat, non excepturi est fugit provident earum sint vero
+          debitis cumque voluptatem architecto perferendis delectus, dicta
+          facilis, pariatur quaerat vitae quibusdam quae officia. Omnis fuga
+          nemo nobis eum doloribus molestiae nesciunt accusantium numquam,
+          quibusdam sit, exercitationem labore illum, atque natus.
+        </p>
       </article>
       <article>
-        <figure><img src="" alt="" /></figure>
+        <figure><img src="img/dragon.jpeg" alt="dragon photo" /></figure>
+        <h3>Dragon</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorem
+          dignissimos totam ipsum optio quas ad minima quasi tempora beatae
+          inventore, accusantium fugiat assumenda autem ea ut iusto commodi
+          possimus sed, obcaecati maxime corporis quia. Quos quis harum repellat
+          nisi iste ut nesciunt iusto, illo vel. Voluptatum dolores animi
+          accusamus?
+        </p>
       </article>
-      <button>More</button>
+      <footer><a href="#">More</a></footer>
     </main>
     <footer>
       <section>
