--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -4,7 +4,135 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <title>Boostrap Layout</title>
   </head>
-  <body></body>
+  <body>
+    <body>
+        <header>
+          <section id="sub-header-1">
+            <figure>
+              <a href=""><img src="img/byte2.png" alt="" /></a>
+            </figure>
+            <nav>
+              <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <div class="dropdown">
+                  <li><a href="">Contact</a></li>
+                  <div class="dropdown-one">
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Contact</a></li>
+                  </div>
+                </div>
+              </ul>
+            </nav>
+            <nav>
+              <ul>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Twitter</a></li>
+              </ul>
+            </nav>
+          </section>
+          <section id="hero">
+            <div class="layout">
+              <video autoplay>
+                <source src="media/video/Space-hero-video.mp4" />
+              </video>
+            </div>
+            <h1>Welcome to Mars</h1>
+            <button>Buy now</button>
+          </section>
+        </header>
+        <main id="services">
+          <h1>Our Services</h1>
+          <article>
+            <figure><img src="img/falcony9.jpeg" alt="falcon9 photo" /></figure>
+            <h3>Falcon</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+              deserunt recusandae ab quidem aliquid eaque possimus odit a ipsam!
+              Assumenda enim dolorem, cupiditate saepe deserunt vero architecto ex
+              sequi soluta!
+            </p>
+          </article>
+          <article>
+            <figure><img src="img/heavy.jpeg" alt="falcon heavy photo" /></figure>
+            <h3>Falcon Heavy</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+              perspiciatis fugiat, non excepturi est fugit provident earum sint vero
+              debitis cumque voluptatem architecto perferendis delectus, dicta
+              facilis, pariatur quaerat vitae quibusdam quae officia. Omnis fuga
+              nemo nobis eum doloribus molestiae nesciunt accusantium numquam,
+              quibusdam sit, exercitationem labore illum, atque natus.
+            </p>
+          </article>
+          <article>
+            <figure><img src="img/dragon.jpeg" alt="dragon photo" /></figure>
+            <h3>Dragon</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorem
+              dignissimos totam ipsum optio quas ad minima quasi tempora beatae
+              inventore, accusantium fugiat assumenda autem ea ut iusto commodi
+              possimus sed, obcaecati maxime corporis quia. Quos quis harum repellat
+              nisi iste ut nesciunt iusto, illo vel. Voluptatum dolores animi
+              accusamus?
+            </p>
+          </article>
+          <footer><a href="#">More</a></footer>
+        </main>
+        <footer>
+          <section>
+            <article>
+              <figure><img src="" alt="" /></figure>
+              <p></p>
+            </article>
+            <nav>
+              <h2>Quick menu</h2>
+              <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact</a></li>
+              </ul>
+            </nav>
+            <article>
+              <h2>Contact</h2>
+              <form action="#" method="post">
+                <div>
+                  <label for="fullname">Name</label><br />
+                  <input type="text" name="fullname" id="fullname" />
+                </div>
+    
+                <div>
+                  <label for="email"> Email</label>
+                  <br />
+                  <input type="text" name="email" id="email" />
+                </div>
+                <div>
+                  <label for="message">Message</label><br />
+                  <textarea
+                    name="message"
+                    id="message"
+                    cols="30"
+                    rows="10"
+                  ></textarea>
+                </div>
+                <button>Send</button>
+              </form>
+            </article>
+          </section>
+          <section>
+            <div>
+              <p>&copy copyright 2021</p>
+            </div>
+            <div>
+              <button>Top</button>
+            </div>
+          </section>
+        </footer>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
